recalculate fragment length to avoid too short the last fragment, increase height of video gallery, use seed in video out filename

--- a/style.css
+++ b/style.css
@@ -32,3 +32,7 @@ button.pause-button{
     margin-bottom: 3px;
     padding: unset;
 }
+
+#replacer_video_gallery {
+    height: 450px;
+}
